[package]
name = "activity-diagrams"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
graphviz-rust = "0.7.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
