[package]
name = "activity-diagrams"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
graphviz-rust = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6.2"
